Added environment changes

--- a/src/app/module/view-files/view-files.component.css
+++ b/src/app/module/view-files/view-files.component.css
@@ -49,8 +49,11 @@
 }
 
 .note-div {
-  color: red;
   font-size: 16px;
+}
+
+.imp-note-span {
+  color: red;
 }
 
 ::ng-deep .note-div .pi-exclamation-triangle {
