--- a/src/app/module/view-files/view-files.component.html
+++ b/src/app/module/view-files/view-files.component.html
@@ -21,10 +21,14 @@
   </div>
   <div class="note-div">
     <h4>
-      <div class="pi pi-exclamation-triangle"></div>
-      Important note: Some files might take time to be processed. If the file
-      you uploaded doesn't appear on either of the lists below, kindly hit
-      refresh after some time.
+      <span class="imp-note-span"
+        ><div class="pi pi-exclamation-triangle"></div>
+        Important note: </span
+      ><span
+        >Some files might take time to be processed. If the file you uploaded
+        doesn't appear on either of the lists below, kindly hit refresh after
+        some time.</span
+      >
     </h4>
   </div>
   <div class="divContainer">
