--- a/src/app/module/upload-files/upload-files.component.html
+++ b/src/app/module/upload-files/upload-files.component.html
@@ -16,7 +16,7 @@
     <div>
       <h4>
         <i class="pi pi-exclamation-circle">&nbsp;</i>Maximum Allowed File Size:
-        300 MB.
+        {{ maxFileSize | filesize }}.
       </h4>
     </div>
     <div>
@@ -30,7 +30,7 @@
         cancelLabel="Clear All"
         chooseLabel="Choose File(s)"
         [fileLimit]="10"
-        [maxFileSize]="300000000"
+        [maxFileSize]="maxFileSize"
       >
       </p-fileUpload>
     </div>
