--- a/src/app/module/upload-files/upload-files.component.html
+++ b/src/app/module/upload-files/upload-files.component.html
@@ -21,7 +21,7 @@
     </div>
     <div>
       <p-fileUpload
-        name="myfile[]"
+        name="pdfFiles[]"
         accept=".pdf"
         [multiple]="true"
         [customUpload]="true"
