--- a/src/app/module/view-files/view-files.component.css
+++ b/src/app/module/view-files/view-files.component.css
@@ -77,8 +77,8 @@
 ::ng-deep .p-datatable .p-sortable-column:focus {
   box-shadow: none;
 }
-/** Uncomment during clean-up**/
-/* ::ng-deep .p-datatable .p-datatable-thead tr th {
+
+::ng-deep .p-datatable .p-datatable-thead tr th {
   background-color: #afdbfd;
   color: #002a50;
   text-align: center;
@@ -86,7 +86,7 @@
 
 ::ng-deep .p-datatable .p-datatable-tbody tr:nth-child(even) {
   background-color: #ddeaf7;
-} */
+}
 
 .row-cell-content-filename {
   font-weight: bold;
