--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,12 @@
 ::ng-deep .p-button {
   background-color: #002a50;
   border: #28639e;
+  padding: 1.25rem 1.75rem;
+  font-size: 16px;
+}
+
+::ng-deep .p-component .pi {
+  font-size: 18px;
 }
 
 ::ng-deep .upload-main-div {
@@ -13,6 +19,7 @@
 
 ::ng-deep .p-component {
   font-family: Verdana, Helvetica;
+  font-size: 1.5rem;
 }
 
 ::ng-deep .p-fileupload .p-fileupload-row {
