--- a/src/app/module/view-files/view-files.component.css
+++ b/src/app/module/view-files/view-files.component.css
@@ -125,3 +125,9 @@
   font-weight: bold;
   margin-bottom: 2rem;
 }
+
+.no-item-note {
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 2rem;
+}
