--- a/src/app/module/view-files/view-files.component.html
+++ b/src/app/module/view-files/view-files.component.html
@@ -75,6 +75,9 @@
         </tr>
       </ng-template>
     </p-table>
+    <div class="no-item-note" *ngIf="fileList.length === 0">
+      <span>No items found.</span>
+    </div>
   </div>
   <div class="divContainer">
     <span class="table-label-text">
@@ -122,5 +125,8 @@
         </tr>
       </ng-template>
     </p-table>
+    <div class="no-item-note" *ngIf="errorFileList.length === 0">
+      <span>No items found.</span>
+    </div>
   </div>
 </div>
