--- a/src/app/module/unauthorized/unauthorized.component.html
+++ b/src/app/module/unauthorized/unauthorized.component.html
@@ -1,4 +1,4 @@
 <div class="unauthorized-message-container">
-    <p class="unauthorized-message">You are NOT authorized to access this application.</p>
+    <span class="unauthorized-message"><i class="pi pi-exclamation-circle">&nbsp;</i>You are NOT authorized to access this page.</span>
 
 </div>
