Fixed ui header issue.

--- a/src/app/layout/header/header/header.component.css
+++ b/src/app/layout/header/header/header.component.css
@@ -16,9 +16,9 @@
     height: 9.5rem;
     padding: 1rem 2rem 0;
   }
-  .header_welcome-area_application-info__heading {
+  /* .header_welcome-area_application-info__heading {
     line-height: 1.5em;
-  }
+  } */
 }
 
 .pop-up-message__content__button-area {
