--- a/src/app/layout/header/header/header.component.html
+++ b/src/app/layout/header/header/header.component.html
@@ -27,14 +27,22 @@
       <span class="header_welcome-area_user-info__user-name">
         Welcome {{ userName | titlecase }}</span
       >
+      <span class="header_welcome-area_clock__utc-date utc-date"
+      >{{ utcTime | date: "dd MMMYY HH:mm" }} Z |</span
+      >
+      <span class="header_welcome-area_clock__local-date local-date"
+        >{{ localTime | date: "dd MMMYY HH:mm" }} L</span
+      >
+      
       <!-- <a class="header_welcome-area_user-info__anchor" title="Logout">
         Logout</a
       > -->
-      <div class="header_welcome-area_user-info_action-item"></div>
+      <div class="header_welcome-area_user-info_action-item">
+      </div>
     </div>
 
     <!--Clock - section-->
-    <div class="header_welcome-area_clock LMA-clock">
+    <!-- <div class="header_welcome-area_clock LMA-clock">
       <div class="lma-clock-time">
         <span class="header_welcome-area_clock__utc-date utc-date"
           >{{ utcTime | date: "dd MMMYY HH:mm" }} Z |</span
@@ -43,7 +51,7 @@
           >{{ localTime | date: "dd MMMYY HH:mm" }} L</span
         >
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- /Welcome -->
 </header>
